--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 
 spring.devtools.livereload.enabled=true
-
+spring.thymeleaf.cache=false
 logging.level.root=WARN
