feat(회원 가입)  - form 테스트  - securityConfig 필터체인 오류 수정중.. 암호화된 값 제대로 X

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.open-in-view=false
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
 logging.level.root=WARN
+
+spring.h2.console.enabled=false
